# agsworks

./: .cirrus.yml  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
Solutions/: AGSWorks.sln  AGSWorks.vcxproj  AGSWorks.vcxproj.filters
XCode/AGSWorks/AGSWorks.xcodeproj/: project.pbxproj
ci/linux/: Dockerfile
src/: agsworks.cpp  agsworks.h  agsworksutil.h  dlladapt.cpp  dlladapt.h  dynamicserviceloader.cpp  dynamicserviceloader.h
src/misc/: awlog.cpp  awlog.h  base_library.h  library.h  library_posix.cpp  library_posix.h  library_windows.cpp  library_windows.h  utils.cpp  utils.h
src/service/base/: agswdummy.cpp  agswdummy.h  agsworksdriver.cpp  agsworksdriver.h
src/service/gog/: agswgog.cpp  agswgog.h
src/service/steam/: agswsteam.cpp  agswsteam.h  dynapi_steam.cpp  dynapi_steam.h  min_steam_api.h
